--- a/SR_Tracker.csproj
+++ b/SR_Tracker.csproj
@@ -7,7 +7,7 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{F15B7BF3-2C2E-466A-B1CC-5A3A3BE655F9}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>sr</RootNamespace>
+    <RootNamespace>SR.Tracker</RootNamespace>
     <AssemblyName>sr</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -43,6 +43,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tracker.cs" />
     <Compile Include="Packet.cs" />
+    <Compile Include="ClientNode.cs" />
+    <Compile Include="NodeManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
