--- a/SR_Tracker.csproj
+++ b/SR_Tracker.csproj
@@ -37,6 +37,7 @@
     <Reference Include="log4net">
       <HintPath>packages\log4net.2.0.5\lib\net40-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
