--- a/SR_Tracker.csproj
+++ b/SR_Tracker.csproj
@@ -44,8 +44,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tracker.cs" />
     <Compile Include="Packet.cs" />
-    <Compile Include="ClientNode.cs" />
     <Compile Include="NodeManager.cs" />
+    <Compile Include="NetworkNode.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
