--- a/SR_Tracker.csproj
+++ b/SR_Tracker.csproj
@@ -3,8 +3,6 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{F15B7BF3-2C2E-466A-B1CC-5A3A3BE655F9}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>SR.Tracker</RootNamespace>
@@ -44,8 +42,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tracker.cs" />
     <Compile Include="Packet.cs" />
-    <Compile Include="NodeManager.cs" />
-    <Compile Include="NetworkNode.cs" />
+    <Compile Include="TreeNode.cs" />
+    <Compile Include="ConnectedClient.cs" />
+    <Compile Include="ClientsManager.cs" />
+    <Compile Include="TreeManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
